refactor and feat: clean implement and improve comment module.
