# internal/routers/api/v1/comment.go
@@ -1,121 +1,127 @@
 package v1
 
 import (
-	"fmt"
-	"github.com/OJoklrO/forum/global"
+	"github.com/OJoklrO/forum/internal/model"
 	"github.com/OJoklrO/forum/internal/service"
 	"github.com/OJoklrO/forum/pkg/app"
-	"github.com/OJoklrO/forum/pkg/convert"
-	"github.com/OJoklrO/forum/pkg/errcode"
 	"github.com/gin-gonic/gin"
+	"net/http"
+	"strconv"
+	"strings"
 )
 
-type Comment struct {
-
-}
+type Comment struct{}
 
 func NewComment() Comment {
 	return Comment{}
 }
 
-//func (c Comment) Check(ctx *gin.Context) {
+type CommentListResponse struct {
+	Comments   []*model.Comment `json:"comments"`
+	TotalPages int              `json:"total_pages"`
+}
+
+// @Summary Get a comment list by the post id.
+// @Produce json
+// @Param post_id path int true "post id"
+// @Param page query int true "page number"
+// @Param page_size query int true "page size"
+// @Success 200 {object} CommentListResponse "success"
+// @Router /api/v1/comments/{post_id} [get]
+func (comment *Comment) List(c *gin.Context) {
+	param := service.ListCommentRequest{}
+	postID, err := strconv.Atoi(c.Param("post_id"))
+	if err != nil {
+		app.ResponseError(c, http.StatusBadRequest, "param error.")
+		return
+	}
+	param.PostID = uint32(postID)
+
+	svc := service.New(c.Request.Context())
+	totalPages, err := svc.CountComments(&service.CountCommentsRequest{PostID: param.PostID})
+	if err != nil {
+		app.ResponseError(c, http.StatusInternalServerError,
+			"svc.CountComments err: "+err.Error())
+		return
+	}
+
+	page, errPage := strconv.Atoi(c.Query("page"))
+	pageSize, errPageSize := strconv.Atoi(c.Query("page_size"))
+	if errPage != nil || errPageSize != nil {
+		app.ResponseError(c, http.StatusInternalServerError,
+			"page or page_size param error.")
+		return
+	}
+
+	comments, err := svc.ListComment(&param, page, pageSize)
+	if err != nil {
+		app.ResponseError(c, http.StatusInternalServerError,
+			"svc.ListComment err: "+err.Error())
+		return
+	}
+	c.JSON(http.StatusOK, CommentListResponse{
+		comments,
+		totalPages,
+	})
+}
+
+// @Summary Comment a post.
+// @Produce json
+// @Param body body service.CreateCommentRequest true "body"
+// @Success 200 {object} MessageResponse "success"
+// @Router /api/v1/comments/{post_id} [post]
+func (comment *Comment) Create(c *gin.Context) {
+	param := service.CreateCommentRequest{}
+	errs := app.BindBodyWithValidation(c, &param)
+	if errs != nil {
+		app.ResponseError(c, http.StatusBadRequest,
+			"BindBodyWithValidation errs: "+strings.Join(errs.Errors(), ", "))
+		return
+	}
+
+	svc := service.New(c.Request.Context())
+	err := svc.CreateComment(&param)
+	if err != nil {
+		app.ResponseError(c, http.StatusInternalServerError,
+			"svc.CreateComment err: "+err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, MessageResponse{"success."})
+}
+
+// @Summary Delete a comment.
+// @Produce json
+// @Param post_id path int true "post id"
+// @Param id path int true "comment id"
+// @Success 200 {object} MessageResponse "success"
+// @Router /api/v1/comments/{post_id}/{id} [delete]
+func (comment *Comment) Delete(c *gin.Context) {
+	param := service.DeleteCommentRequest{}
+	id, errId := strconv.Atoi(c.Param("id"))
+	postId, errPost := strconv.Atoi(c.Param("post_id"))
+	if errId != nil || errPost != nil {
+		app.ResponseError(c, http.StatusBadRequest, "param error.")
+		return
+	}
+	param.ID = uint32(id)
+	param.PostID = uint32(postId)
+
+	svc := service.New(c.Request.Context())
+	err := svc.DeleteComment(&param)
+	if err != nil {
+		app.ResponseError(c, http.StatusInternalServerError,
+			"svc.DeleteComment err: "+err.Error())
+		return
+	}
+	c.JSON(http.StatusOK, MessageResponse{"success."})
+}
+
+// todo: edit comment
+//func (comment *Comment) Edit(c *gin.Context) {
 //
 //}
 
-// @Summary get comment list with post id
-// @Produce json
-// @Param id path int true "post id"
-// @Param page query int false "page number"
-// @Param page_size query int false "page size"
-// @Success 200 {object} model.CommentSwagger "success"
-// @Failure 400 {object} errcode.Error "request error"
-// @Failure 500 {object} errcode.Error "server error"
-// @Router /api/v1/comments/{post_id} [get]
-func (c Comment) List(ctx *gin.Context) {
-	param := service.ListCommentRequest{}
-	response := app.NewResponse(ctx)
-	param.PostID = convert.StrTo(ctx.Param("post_id")).MustUInt32()
-
-	svc := service.New(ctx.Request.Context())
-	pager := app.Pager{
-		Page: app.GetPage(ctx),
-		PageSize: app.GetPageSize(ctx),
-	}
-	totalRows, err := svc.CountComments(&service.CountCommentsRequest{PostID: param.PostID})
-	if err != nil {
-		global.Logger.Errorf("svc.CountComments err: %v", err)
-		response.ToErrorResponse(errcode.ErrorCountCommentsFail)
-		return
-	}
-
-	comments, err := svc.ListComment(&param, &pager)
-	if err != nil {
-		global.Logger.Errorf("svc.ListComment err: %v", err)
-		response.ToErrorResponse(errcode.ErrorListCommentsFail)
-		return
-	}
-	response.ToResponseList(comments, totalRows)
-}
-
-// @Summary create comment
-// @Produce json
-// @Param content body string true "comment content"
-// @Param createdby body int true "creator id"
-// @Param postid body int true "post id"
-// @Success 200 {object} model.Comment "success"
-// @Failure 400 {object} errcode.Error "request error"
-// @Failure 500 {object} errcode.Error "server error"
-// @Router /api/v1/comments/ [post]
-func (c Comment) Create(ctx *gin.Context) {
-	param := service.CreateCommentRequest{}
-	response := app.NewResponse(ctx)
-	//valid, errs := app.BindAndValid(ctx, &param)
-	//if !valid {
-	//	global.Logger.Errorf("app.BindAndValid errs: %v", errs)
-	//	errRsp := errcode.InvalidParams.WithDetails(errs.Errors()...)
-	//	response.ToErrorResponse(errRsp)
-	//	return
-	//}
-	a := make(map[string]interface{})
-	_ = ctx.BindJSON(&a)
-	fmt.Println(a)
-
-	param.PostID = convert.StrTo(a["postid"].(string)).MustUInt32()
-	param.Content = a["content"].(string)
-	param.CreatedBy = a["createdby"].(string)
-
-	svc := service.New(ctx.Request.Context())
-	err := svc.CreateComment(&param)
-	if err != nil {
-		global.Logger.Errorf("svc.CreateComment err: %v", err)
-		response.ToErrorResponse(errcode.ErrorCreateCommentFail)
-		return
-	}
-
-	response.ToResponse(gin.H{})
-	return
-}
-
-// @Summary delete comment need adm cookie
-// @Produce json
-// @Param id path int true "comment id"
-// @Success 200 {object} model.Comment "success"
-// @Failure 400 {object} errcode.Error "request error"
-// @Failure 500 {object} errcode.Error "server error"
-// @Router /api/v1/comments/{id} [delete]
-func (c Comment) Delete(ctx *gin.Context) {
-	param := service.DeleteCommentRequest{}
-	param.ID = convert.StrTo(ctx.Param("id")).MustUInt32()
-	response := app.NewResponse(ctx)
-
-	svc := service.New(ctx.Request.Context())
-	err := svc.DeleteComment(&param)
-	if err != nil {
-		global.Logger.Errorf("svc.DeleteComment err: %v", err)
-		response.ToErrorResponse(errcode.ErrorDeleteCommentFail)
-		return
-	}
-
-	response.ToResponse(gin.H{})
-	return
-}
+//func (comment *Comment) Get(c *gin.Context) {
+//
+//}
